# midjourney-mcp

./: .env.example  .gitignore  README.md  SETUP.md  audit.py  client.py  pyproject.toml  requirements.txt  server.py
midjourney_mcp/: costs.py  server.py
tests/: test_basic.py
