[project]
name = "midjourney-mcp"
version = "0.1.0"
description = "FastMCP server for Midjourney image generation via PiAPI, with daily-USD cost cap + per-call audit + SSRF-safe image URL inputs."
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.2.3,<4.0",
    "httpx>=0.27,<1.0",
    "mycelium-security @ git+https://github.com/adelaidasofia/mycelium-security.git@v0.1.0",
]
license = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.15.14,<1.0",
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py310"
