[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midjourney-mcp"
version = "0.1.0"
description = "FastMCP server for Midjourney image generation via PiAPI, with daily-USD cost cap + per-call audit + SSRF-safe image URL inputs."
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.4.0,<4.0",
    "httpx>=0.27,<1.0",
    "mycelium-security @ git+https://github.com/adelaidasofia/mycelium-security.git@v0.1.0",
]
license = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10.0",
    "ruff>=0.8,<1.0",
]

[tool.pytest.ini_options]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py310"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
